# CourseSelector

./: .gitignore  Cargo.toml  README.md  build.rs  index.js  index.ts  package-lock.json
src/: main.rs
static/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
static/src/: App.svelte  app.html  main.ts
static/src/lib/components/: accordion.svelte  accordionBackup.svelte  courseTable.svelte  courseTimes.svelte  select.svelte  spinner.svelte
static/src/lib/helper/: fetchAPI.ts
static/src/lib/stores/: localStorages.ts  selectedCourses.ts
static/src/routes/: +layout.svelte  +page.svelte  +page.ts
static/src/routes/calender/: +page.svelte
