[package]
name = "CourseSelector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", default-features = false , features = [ "macros" ] }
actix-cors = "0.6.3"
awc = { version = "3.0.0", default-features = false, features = [ "openssl" ] }
actix-files = { version = "0.6.2" }
scraper = { version = "0.13.0" }
lazy_static = { version = "1.4.0" }
serde = { version = "1.0.143", default-features = false, features = [ "std", "derive" ] }
serde_json = { version = "1.0.83", default-features = false, features = [ "std" ] }
